# arrow-adbc

./: version.js
c/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
c/driver/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
c/driver/netezza/: CMakeLists.txt  CMakeUserPresets.example.json  README.md  connection.cc  connection.h  constants.h  database.cc  database.h  error.cc  netezza.cc  netezza_benchmark.cc  netezza_copy_reader.cc  netezza_copy_reader.h  netezza_copy_reader_test.cc  netezza_test.cc  netezza_type.h  netezza_type_test.cc  postgres_copy_reader.cc  statement.cc  statement.h  vcpkg.json
c/driver/postgresql/: AdbcDriverPostgreSQLConfig.cmake  AdbcDriverPostgreSQLConfigVersion.cmake  CMakeCache.txt  CTestTestfile.cmake  Makefile  adbc-driver-postgresql.pc  cmake_install.cmake  connection.cc  connection.h  error.cc  result_helper.cc  statement.cc
main/: faq.html  genindex.html  index.html  py-modindex.html  search.html
main/cpp/: concurrency.html  driver_manager.html  index.html  quickstart.html
main/cpp/api/: adbc.html  adbc_driver_manager.html  index.html
main/csharp/: index.html
main/development/: contributing.html  nightly.html  releasing.html
main/driver/: duckdb.html  flight_sql.html  installation.html  jdbc.html  postgresql.html  snowflake.html  sqlite.html  status.html
main/format/: comparison.html  specification.html  versioning.html
main/java/: driver_manager.html  index.html  quickstart.html
main/java/api/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-summary.html  overview-tree.html  serialized-form.html
main/java/api/org/apache/arrow/adbc/core/: AdbcConnection.GetObjectsDepth.html  AdbcConnection.html  AdbcDatabase.html  AdbcDriver.html  AdbcException.html  AdbcInfoCode.html  AdbcOptions.html  AdbcStatement.PartitionResult.html  AdbcStatement.QueryResult.html  AdbcStatement.UpdateResult.html  AdbcStatement.html  AdbcStatusCode.html  BulkIngestMode.html  ErrorDetail.html  IsolationLevel.html  PartitionDescriptor.html  StandardSchemas.html  StandardStatistics.html  TypedKey.html  package-summary.html  package-tree.html  package-use.html
main/java/api/org/apache/arrow/adbc/core/class-use/: AdbcConnection.GetObjectsDepth.html  AdbcConnection.html  AdbcDatabase.html  AdbcDriver.html  AdbcException.html  AdbcInfoCode.html  AdbcOptions.html  AdbcStatement.PartitionResult.html  AdbcStatement.QueryResult.html  AdbcStatement.UpdateResult.html  AdbcStatement.html  AdbcStatusCode.html  BulkIngestMode.html  ErrorDetail.html  IsolationLevel.html  PartitionDescriptor.html  StandardSchemas.html  StandardStatistics.html  TypedKey.html
main/java/api/org/apache/arrow/adbc/driver/flightsql/: FlightInfoReader.html  FlightSqlConnection.html  FlightSqlDatabase.html  FlightSqlDriver.html  FlightSqlStatement.html  package-summary.html  package-tree.html  package-use.html
main/java/api/org/apache/arrow/adbc/driver/jdbc/: JdbcArrowReader.html  JdbcConnection.html  JdbcDataSourceDatabase.html  JdbcDriver.html  JdbcQuirks.Builder.html  JdbcQuirks.html  JdbcStatement.html  StandardJdbcQuirks.html  package-summary.html  package-tree.html  package-use.html
main/java/api/org/apache/arrow/adbc/driver/testsuite/: AbstractConnectionMetadataTest.html  AbstractConnectionTest.html  AbstractPartitionDescriptorTest.html  AbstractSqlTypeTest.html  AbstractStatementTest.html  AbstractTransactionTest.html  ArrowAssertions.AdbcExceptionAssert.html  ArrowAssertions.FieldAssert.html  ArrowAssertions.SchemaAssert.html  ArrowAssertions.html  (+6 more)
main/java/api/org/apache/arrow/adbc/drivermanager/: AdbcDriverManager.html  package-summary.html  package-tree.html  package-use.html
main/java/api/org/apache/arrow/adbc/sql/: SqlQuirks.Builder.html  SqlQuirks.html  package-summary.html  package-tree.html  package-use.html
main/python/: driver_manager.html  index.html  quickstart.html
main/python/api/: adbc_driver_flightsql.html  adbc_driver_manager.html  adbc_driver_postgresql.html  adbc_driver_sqlite.html  index.html
main/python/recipe/: driver_manager.html  index.html  postgresql.html
main/r/: index.html
main/r/adbcdrivermanager/: pkgdown.yml  search.json
main/r/adbcdrivermanager/reference/: adbc_connection_init.html  adbc_database_init.html  adbc_statement_init.html
main/r/adbcflightsql/: pkgdown.yml
main/r/adbcpostgresql/: pkgdown.yml
main/r/adbcsnowflake/: pkgdown.yml
main/r/adbcsqlite/: pkgdown.yml
(+38 files in other folders)
